--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,35 @@ body .container {
   height: 100%;
 }
 
+.tagGetOff {
+  position: fixed;
+  top: 35%;
+  right: 0%;
+  background-color: black;
+  transform: rotate(180deg);
+  z-index: 10;
+  cursor: pointer;
+  box-shadow: 0 0 6px 4px #1f1f1f;
+}
+.tagGetOff .discountGetOff {
+  text-decoration: none;
+}
+.tagGetOff .discountGetOff .discount {
+  width: auto;
+  height: auto;
+}
+.tagGetOff .discountGetOff .discount .title {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #ffffff;
+  text-align: center;
+  writing-mode: vertical-rl;
+  text-orientation: right;
+  transform: rotate(180deg);
+  font-weight: 600;
+  padding: 40px 15px;
+}
+
 .header {
   width: 100%;
   height: 60px;
