--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -11,3 +11,36 @@ body{
         height: 100%;
     }
 }
+
+// Tag get 25% off
+
+.tagGetOff{
+    position: fixed;
+    top:35%;
+    right:0%;
+    background-color: black;
+    transform: rotate(180deg);
+    z-index: 10;
+
+    cursor: pointer;
+    box-shadow: 0 0 6px 4px #1f1f1f;
+    .discountGetOff{
+        text-decoration: none;
+        // padding: 40px 15px;
+        .discount{
+            width:auto;
+            height: auto;
+            .title{
+                font-size:1rem;
+                font-family: $fontJura;
+                color: #ffffff;
+                text-align: center;
+                writing-mode: vertical-rl;
+                text-orientation: right;
+                transform: rotate(180deg);
+                font-weight: 600;
+                padding: 40px 15px;
+            }
+        }
+    }
+}
