--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,41 @@ body .container {
   padding: 40px 15px;
 }
 
+.arrowUp {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 8;
+}
+.arrowUp .directionUp .arrowUpIcon {
+  width: 48px;
+}
+
+.skullSocialMedia {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  cursor: pointer;
+  z-index: 8;
+}
+.skullSocialMedia .socialMedia .skullIcon {
+  width: 48px;
+}
+.skullSocialMedia .socialMedia ul {
+  display: none;
+  position: relative;
+  bottom: 58px;
+  left: 30px;
+}
+.skullSocialMedia .socialMedia ul li {
+  list-style-type: none;
+}
+.skullSocialMedia .socialMedia ul li .item .itemSocial {
+  width: 40px;
+  text-decoration: none;
+  margin: 5px 0px;
+}
+
 .header {
   width: 100%;
   height: 60px;
