--- a/views/error404.html
+++ b/views/error404.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Rubik+Distressed&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/svg" href="../img/skull.svg" sizes="16x16"/>
-    <link rel="icon" type="image/svg" href="../img/skull.svg" sizes="32x32"/>
-    <link rel="icon" type="image/svg" href="../img/skull.svg" sizes="64x64"/>
+    <link rel="icon" type="image/svg" href="../img/skullLogo.svg" sizes="16x16"/>
+    <link rel="icon" type="image/svg" href="../img/skullLogo.svg" sizes="32x32"/>
+    <link rel="icon" type="image/svg" href="../img/skullLogo.svg" sizes="64x64"/>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Hoja de estilos -->
