--- a/scss/_gift_Card.scss
+++ b/scss/_gift_Card.scss
@@ -33,7 +33,7 @@
                     .paragraph{
                         font-size:0.8rem;
                         font-family: $fontJura;
-                        color: #D9D9D9;
+                        color: #000000;
                         font-weight: 600;
                     }
                 }
