--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,12 @@
 body {
   background-color: rgb(19, 19, 19);
 }
-body .container {
-  width: 100%;
-  height: 100%;
-}
 
-.tagGetOff {
+html .mainContainer {
+  width: 100vw;
+  height: 100vh;
+}
+html .mainContainer .tagGetOff {
   position: fixed;
   top: 35%;
   right: 0%;
@@ -33,14 +33,14 @@ body .container {
   cursor: pointer;
   box-shadow: 0 0 6px 4px #1f1f1f;
 }
-.tagGetOff .discountGetOff {
+html .mainContainer .tagGetOff .discountGetOff {
   text-decoration: none;
 }
-.tagGetOff .discountGetOff .discount {
+html .mainContainer .tagGetOff .discountGetOff .discount {
   width: auto;
   height: auto;
 }
-.tagGetOff .discountGetOff .discount .title {
+html .mainContainer .tagGetOff .discountGetOff .discount .title {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   color: #ffffff;
@@ -51,37 +51,35 @@ body .container {
   font-weight: 600;
   padding: 40px 15px;
 }
-
-.arrowUp {
+html .mainContainer .arrowUp {
   position: fixed;
   bottom: 30px;
   right: 30px;
   z-index: 8;
 }
-.arrowUp .directionUp .arrowUpIcon {
+html .mainContainer .arrowUp .directionUp .arrowUpIcon {
   width: 45px;
 }
-
-.skullSocialMedia {
+html .mainContainer .skullSocialMedia {
   position: fixed;
   bottom: 30px;
   left: 30px;
   cursor: pointer;
   z-index: 8;
 }
-.skullSocialMedia .socialMedia .skullIcon {
+html .mainContainer .skullSocialMedia .socialMedia .skullIcon {
   width: 45px;
 }
-.skullSocialMedia .socialMedia ul {
+html .mainContainer .skullSocialMedia .socialMedia ul {
   display: none;
   position: relative;
   bottom: 58px;
   left: 30px;
 }
-.skullSocialMedia .socialMedia ul li {
+html .mainContainer .skullSocialMedia .socialMedia ul li {
   list-style-type: none;
 }
-.skullSocialMedia .socialMedia ul li .item .itemSocial {
+html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   width: 40px;
   text-decoration: none;
   margin: 5px 0px;
@@ -239,8 +237,7 @@ body .container {
 
 .heroSection {
   width: 100%;
-  height: 100vh;
-  z-index: -1;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
