--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -6,85 +6,80 @@
 body{
     // background-color: rgb(238, 238, 238);
     background-color: rgb(19, 19, 19);
-    .container{
-        width: 100%;
-        height: 100%;
-    }
 }
-
-// Tag get 25% off
-
-.tagGetOff{
-    position: fixed;
-    top:35%;
-    right:0%;
-    background-color: black;
-    transform: rotate(180deg);
-    z-index: 10;
-    cursor: pointer;
-    box-shadow: 0 0 6px 4px #1f1f1f;
-    .discountGetOff{
-        text-decoration: none;
-        // padding: 40px 15px;
-        .discount{
-            width:auto;
-            height: auto;
-            .title{
-                font-size:1rem;
-                font-family: $fontJura;
-                color: #ffffff;
-                text-align: center;
-                writing-mode: vertical-rl;
-                text-orientation: right;
-                transform: rotate(180deg);
-                font-weight: 600;
-                padding: 40px 15px;
+html{
+    .mainContainer{
+        width: 100vw;
+        height: 100vh;
+        .tagGetOff{
+            position: fixed;
+            top:35%;
+            right:0%;
+            background-color: black;
+            transform: rotate(180deg);
+            z-index: 10;
+            cursor: pointer;
+            box-shadow: 0 0 6px 4px #1f1f1f;
+            .discountGetOff{
+                text-decoration: none;
+                // padding: 40px 15px;
+                .discount{
+                    width:auto;
+                    height: auto;
+                    .title{
+                        font-size:1rem;
+                        font-family: $fontJura;
+                        color: #ffffff;
+                        text-align: center;
+                        writing-mode: vertical-rl;
+                        text-orientation: right;
+                        transform: rotate(180deg);
+                        font-weight: 600;
+                        padding: 40px 15px;
+                    }
+                }
             }
         }
-    }
-}
-
-// ArrowUp
-
-.arrowUp{
-    position: fixed;
-    bottom:30px;
-    right:30px;
-    z-index: 8;
-    .directionUp{
-        .arrowUpIcon{
-            width:45px;
+        .arrowUp{
+            position: fixed;
+            bottom:30px;
+            right:30px;
+            z-index: 8;
+            .directionUp{
+                .arrowUpIcon{
+                    width:45px;
+                }
+            }
         }
-    }
-}
-
-// SkullSocialMedia
-
-.skullSocialMedia{
-    position: fixed;
-    bottom:30px;
-    left:30px;
-    cursor: pointer;
-    z-index: 8;
-    .socialMedia{
-        .skullIcon{
-            width:45px;
-        }
-        ul{
-            display: none;
-            position: relative;
-            bottom:58px;
+        .skullSocialMedia{
+            position: fixed;
+            bottom:30px;
             left:30px;
-            li{
-                list-style-type: none;
-                .item{
-                    .itemSocial{
-                        width:40px;
-                        text-decoration: none;
-                        margin:5px 0px;
+            cursor: pointer;
+            z-index: 8;
+            .socialMedia{
+                .skullIcon{
+                    width:45px;
+                }
+                ul{
+                    display: none;
+                    position: relative;
+                    bottom:58px;
+                    left:30px;
+                    li{
+                        list-style-type: none;
+                        .item{
+                            .itemSocial{
+                                width:40px;
+                                text-decoration: none;
+                                margin:5px 0px;
+                            }
+                        }
                     }
                 }
             }
         }
     }
 }
+
+
