--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -1,11 +1,10 @@
 .heroSection{
     width:100%;
-    height: 100vh;
+    height: 100%;
     // background-image: url(../img/background_Hero.webp);
     // background-position: center;
     // background-repeat: no-repeat;
     // background-size: cover;
-    z-index: -1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
