--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -1,15 +1,17 @@
 .heroSection{
     width:100%;
-    height: 100%;
-    // background-image: url(../img/background_Hero.webp);
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
+    height: 1000px;
+    background-image: url(../img/background_Hero.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 0px 200px 0px;
+    overflow: visible;
+    margin: -200px 0px 100px 0px;
+    padding: 0px 100px;
     .heroSectionCentered{
         z-index: 1;
         .info{
