--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -81,6 +81,7 @@ html{
         }
     }
 }
-.newArrivals, .bestSellers, .footerContainer{
-    padding:0px 20px;
+.newArrivals, .bestSellers{
+    max-width: 1300px;
+    margin: 0 auto;
 }
