--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -11,15 +11,14 @@
     .sectionCard{
         .cardProducts{
             cursor: pointer;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            &:hover{
+                box-shadow: 0 0 4px 2px rgb(112, 112, 112);
+                // filter:grayscale(0%);
+            }
             .outFit{
                 width:100%;
-                // background-color: transparent;
-                transition: all 0.3s ease;
-                &:hover{
-                    // filter: blur(.1rem);
-                    // background-color: rgba(255, 0, 0, 0.5);
-                    filter:grayscale(100%);
-                }
             }
             .info{
                 display: flex;
@@ -39,18 +38,6 @@
                         background-color: #3d3d3d;
                     }
                 }
-            }
-        }
-        // .cardProducts + .outFit{
-        //     filter: grayscale(10%);
-        //     transition: all 0.3s ease;
-        //     &:hover{
-        //     }
-        // }
-        .cardProducts{
-            transition: all 0.3s ease;
-            &:hover{
-                box-shadow: 0 0 4px 2px rgb(112, 112, 112);
             }
         }
     }
