--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -26,8 +26,7 @@
                 font-size:1.8rem;
                 font-family: $fontJura;
                 font-weight: 600;
-                color: #D9D9D9;            }
-            .subtitle{
+                color: #D9D9D9;
             }
             .sentence{
                 font-size:1.5rem;
@@ -41,6 +40,26 @@
             transition: color .3s;
             &:hover{
                 color: #8a8a8a;
+            }
+        }
+    }
+    .hoddy{
+        animation: hoddy 2s linear 2s infinite;
+        @keyframes hoddy {
+            0%{
+                filter: drop-shadow(0 0 1px #BC2327);
+            }
+            25%{
+                filter: drop-shadow(0 1px 2px #BC2327);
+            }
+            50%{
+                filter: drop-shadow(0 2px 3px #BC2327);
+            }
+            75%{
+                filter: drop-shadow(0 3px 5px #BC2327);
+            }
+            100%{
+                filter: drop-shadow(0 4px 6px #BC2327);
             }
         }
     }
